Dark Mode and Mobile view alignment is fixed

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ body{
   overflow-y: hidden!important;
   color: #212121;
   text-align:center;
-  background-color: white;
 }
 img{
   /*image effect*/
@@ -35,13 +34,10 @@ img{
   border-radius: 10px;
   padding-bottom:16px;
   /*---*/
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   position: 50% 50%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10%;
 }
 
 .main:hover{
@@ -101,7 +97,7 @@ svg{
 /** Switch
  -------------------------------------*/
 
- .switch input {
+.switch input {
   position: absolute;
   opacity: 0;
 }
@@ -117,7 +113,6 @@ svg{
   width: 2em;
   background: #BDB9A6;
   border-radius: 1em;
-  margin-top: 8%;;
 }
 
 .switch div {
@@ -137,11 +132,12 @@ svg{
           transform: translate3d(100%, 0, 0);
 }
 
-.card
-{
-  color:black;
+.container{
+  margin-bottom:20%;
 }
-.label
-{
-  color:black;
+a{
+  text-decoration: none;
 }
+
+
+      
